--- a/.github/workflows/intro.yml
+++ b/.github/workflows/intro.yml
@@ -7,5 +7,5 @@ jobs:
   hello-world: # job name
     runs-on: ubuntu-latest # 
     steps:
-      - name: actions/checkout@v2
-        run: echo "Hello world"
+      - uses: actions/checkout@v2
+      - run: echo "Hello world"
