--- a/.github/workflows/intro.yml
+++ b/.github/workflows/intro.yml
@@ -4,8 +4,24 @@ on:
   push:
 
 jobs:
-  hello-world: # job name
+  build-test: # job name
     runs-on: ubuntu-latest # 
     steps:
-      - uses: actions/checkout@v2
-      - run: echo "Hello world"
+      - uses: actions/checkout@v4
+      
+      - uses: oven-sh/setup-bud@v1
+        with:
+          bud-version: latest
+
+      - name: Install dependencies
+        run: bud install
+      
+      - name: Build
+        run: bun run build
+
+      - name: Run the server
+        run: bun run preview &
+          sleep 5
+
+      - name: Curl the server
+        run: curl -I http://localhost:4173
