--- a/.github/workflows/intro.yml
+++ b/.github/workflows/intro.yml
@@ -9,12 +9,12 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       
-      - uses: oven-sh/setup-bud@v1
+      - uses: oven-sh/setup-bun@v1
         with:
-          bud-version: latest
+          bun-version: latest
 
       - name: Install dependencies
-        run: bud install
+        run: bun install
       
       - name: Build
         run: bun run build
