--- a/.github/workflows/intro.yml
+++ b/.github/workflows/intro.yml
@@ -9,18 +9,17 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       
-      - uses: oven-sh/setup-bun@v1
-        with:
-          bun-version: latest
+      - name: Setup pnpm
+        uses: pnpm/action-setup@2.4.0
 
       - name: Install dependencies
-        run: bun install
+        run: pnpm install
       
       - name: Build
-        run: bun run build
+        run: pnpm run build
 
       - name: Run the server
-        run: bun run preview &
+        run: pnpm run preview &
           sleep 5
 
       - name: Curl the server
