--- a/.github/workflows/intro.yml
+++ b/.github/workflows/intro.yml
@@ -11,7 +11,9 @@ jobs:
       
       - name: Setup pnpm
         uses: pnpm/action-setup@2.4.0
-
+        with:
+          version: 8
+          
       - name: Install dependencies
         run: pnpm install
       
