--- a/.github/workflows/intro.yml
+++ b/.github/workflows/intro.yml
@@ -10,7 +10,7 @@ jobs:
       - uses: actions/checkout@v4
       
       - name: Setup pnpm
-        uses: pnpm/action-setup@2.4.0
+        uses: pnpm/action-setup@v2.4.0
         with:
           version: 8
           
@@ -21,7 +21,8 @@ jobs:
         run: pnpm run build
 
       - name: Run the server
-        run: pnpm run preview &
+        run: |
+          pnpm run preview &
           sleep 5
 
       - name: Curl the server
